Working on making an Eclipse Plugin out of Rebel2

--- a/build.properties
+++ b/build.properties
@@ -1,1 +1,8 @@
-bin.includes = META-INF/
+source.. = src/
+output..= bin/
+bin.includes = META-INF/,\
+               plugin.xml,\
+               LICENSE,\
+               examples/,\
+               .
+bin.excludes = **/*.rsc
