--- a/build.properties
+++ b/build.properties
@@ -4,5 +4,6 @@ bin.includes = META-INF/,\
                plugin.xml,\
                LICENSE,\
                examples/,\
+               salix/,\
                .
 bin.excludes = **/*.rsc
