--- a/.classpath
+++ b/.classpath
@@ -8,5 +8,6 @@
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/allealle"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/salix"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
